--- a/style.css
+++ b/style.css
@@ -1,1 +1,64 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap');
+body{
+  background-image: url(firehydrant.jpg);
+  padding: 5vw;
+  font-family: Roboto Slab;
 
+}
+p {
+  font-family: Roboto Slab;
+  font-size: 30px;
+  font-weight: bold;
+  color:red;
+
+}
+
+.navbar {
+    position: fixed;
+    width: 100vw;
+    display: flex;
+    justify-content: flex-end;
+    background-color: white;
+  }
+
+.navmenu {
+    border-left: 250px solid white;
+  }
+.navLink a, a:visited {
+
+    text-decoration: none;
+    padding: 20px;
+    display: block;
+    text-align: center;
+  }
+center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 10%;
+  }
+.button {
+    border: 0.5px solid grey;
+    border-radius: 28px;
+    background-color: #ADD8E6;
+    padding: 14px 16px;
+
+    height: -60px;
+
+    font-size: 16px;
+    text-align: center;
+    color: black;
+    text-decoration: none;
+    box-shadow: 0 12px 20px 0 rgba(0,0,0,0.24), 0 5px 10px 0 rgba(0,0,0,0.19);
+    position: absolute;
+
+       }
+div.absolute {
+    position: absolute;
+    justify-content: center;
+    top: 450px;
+    border-left: 210px;
+    width: 1000px;
+    height: -160px;
+    border: 2000px ;
+       }
